--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -4,3 +4,9 @@ services:
         autowire: true
         autoconfigure: true
         public: true
+
+    # Testing
+    #test.App\Test\SomeTestHelper:
+        # id of the private service
+        #alias: 'My\Private\Service'
+        #public: true
