--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -50,3 +50,4 @@ framework:
     # FORM #
     ########
     csrf_protection: ~ # _token in forms
+    validation: { enabled: true, enable_annotations: true }
