--- a/.env
+++ b/.env
@@ -47,5 +47,6 @@ DATABASE_URL=
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+# https://symfony.com/doc/5.0/components/mailer.html#mailer_dsn
+MAILER_DSN=smtp://user:pass@smtp.example.com:587
 ###< symfony/mailer ###
