--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -5,10 +5,55 @@ framework:
 
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
-            async_service_id: '%env(MESSENGER_TRANSPORT_DSN)%'
+            my_sync: 'sync://'
+            my_async: '%env(MESSENGER_TRANSPORT_DSN)%'
             # failed: 'doctrine://default?queue_name=failed'
-            # sync: 'sync://'
+
+            #async:
+            #    dsn: "%env(MESSENGER_TRANSPORT_DSN)%"
+            #    options: []
+
+            # Prototype
+            name:
+                dsn:                  ~
+                # Service id of a custom serializer to use.
+                serializer: null
+                options: []
+                retry_strategy:
+                    # Service id to override the retry strategy entirely
+                    service: null
+                    max_retries: 3
+                    # Time in ms to delay (or the initial value when multiplier is used)
+                    delay: 1000
+                    # If greater than 1, delay will grow exponentially for each retry: this delay = (delay * (multiple ^ retries))
+                    multiplier: 2
+                    # Max time in ms that a retry should ever be delayed (0 = infinite)
+                    max_delay: 0
 
         routing:
             # Route your messages to the transports
-            'App\Domain\Message\Message': async_service_id
+            'App\Domain\Message\MessageNotification': my_async
+
+        serializer:
+            # Service id to use as the default serializer for the transports.
+            default_serializer: messenger.transport.native_php_serializer
+            symfony_serializer:
+                # Serialization format for the messenger.transport.symfony_serializer service (which is not the serializer used by default).
+                format: json
+                # Context array for the messenger.transport.symfony_serializer service (which is not the serializer used by default).
+                context:
+                    # Prototype
+                    name:                 ~
+        
+        # Transport name to send failed messages to (after all retries have failed).
+        failure_transport: null
+        default_bus: null
+        #buses:
+            # Prototype
+            #name:
+                #default_middleware: true # One of true; false; "allow_no_handlers"
+                #middleware:
+                    # Prototype
+                    #-
+                    #    id: ~ # Required
+                    #    arguments: []
