--- a/.env.test
+++ b/.env.test
@@ -9,4 +9,4 @@ PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 SENTRY_DSN=
 REDIS_DSN=
 MESSENGER_TRANSPORT_DSN=doctrine://default
-DATABASE_URL="sqlite:///%kernel.project_dir%/var/data3.db"
+DATABASE_URL="sqlite:////tmp/data_test.db"
