--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "symfony/mailer": "5.0.*",
         "symfony/messenger": "5.0.*",
         "symfony/monolog-bundle": "^3.8",
+        "symfony/notifier": "5.0.*",
         "symfony/options-resolver": "5.0.*",
         "symfony/process": "5.0.*",
         "symfony/property-access": "5.0.*",
