--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -4,3 +4,9 @@ framework:
         default_path: '%kernel.project_dir%/translations'
         fallbacks:
             - en
+
+        enabled: true
+        logging: false
+        formatter: translator.formatter.default
+        cache_dir: '%kernel.cache_dir%/translations'
+        paths: { }
