--- a/config/services.yaml
+++ b/config/services.yaml
@@ -129,3 +129,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    ##############
+    # SERIALIZER #
+    ##############
+    # emoji:
+    #     class: App\Domain\Serializer\EmojiNormalizer
+    #     tags: [serializer.normalizer]
