security in progress

--- a/.env
+++ b/.env
@@ -50,3 +50,7 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # https://symfony.com/doc/5.0/components/mailer.html#mailer_dsn
 MAILER_DSN=smtp://user:pass@smtp.example.com:587
 ###< symfony/mailer ###
+
+### >security< ###
+custom_one=hulluby # user security
+### <s> ###
