--- a/config/packages/sensio_framework_extra.yaml
+++ b/config/packages/sensio_framework_extra.yaml
@@ -5,3 +5,7 @@ sensio_framework_extra:
     request:
         converters: true
         auto_convert: true
+
+    view:        { annotations: true }
+    cache:       { annotations: true }
+    security:    { annotations: true }
