encoders in progress

--- a/.env
+++ b/.env
@@ -53,4 +53,5 @@ MAILER_DSN=smtp://user:pass@smtp.example.com:587
 
 ### >security< ###
 custom_one=hulluby # user security
+query_user=john:dely@9,alphonse:tr5!
 ### <s> ###
