--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,6 +31,10 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
+        # my_very_own_provider:
+            # https://symfony.com/doc/5.0/security/custom_authentication_provider.html
+            # token, listener, provider, factory, config
+
         # basic: 
         #     pattern: ^/basic
         #     http_basic:
@@ -38,6 +42,14 @@ security:
 
         remote:
             pattern: ^/security
+            # or
+            host: ^.*$
+            # or
+            methods: [GET, POST]
+            # or
+            request_matcher: App\Application\Security\RequestMatcher
+                    # app.firewall.remote.request_matcher
+
             # guard:
             # json_login:
                 # check_path: /login
@@ -70,10 +82,15 @@ security:
 
             # custom_authenticators: # 5.3
             context: shared_one
+            user_checker: App\Application\Security\CustomChecker # security.user_checker.remote
             provider: app_user_provider
             guard: # made with bin/console make:auth
                 authenticators:
+                    # bypass the authenticator from GuardAuthenticatorListener
                     - App\Application\Security\CustomQueryAuthenticator
+                    # - others...
+                    # - others...
+                entry_point: App\Application\Security\CustomQueryAuthenticator
 
         main:
             anonymous: lazy # prevents the session from being started if there is no need for authorization
